test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/valid/multiple_static_file_scope_vars.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[24]:
  static
  int
  identifier(foo)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  ;
  }
  extern
  int
  identifier(foo)
  ;
  static
  int
  identifier(foo)
  =
  const int(4)
  ;
