test/tests/stages/10_file-scope_variables_and_storage-class_specifiers/invalid_types/redeclare_file_scope_var_as_fun.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(foo)
  =
  const int(10)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  (
  void
  )
  ;
  return
  const int(0)
  ;
  }
